syntax = "proto3";

package com.ximuyi.game.server.proto;

message TestRequest{
}

message TestResponse{
    int64 currentDateTime = 1;
}
